--- a/projects/angular2-toaster/package.json
+++ b/projects/angular2-toaster/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@dkachko/angular2-toaster",
+  "name": "angular2-toaster",
   "description": "An Angular Toaster Notification library based on AngularJS-Toaster",
-  "version": "14.0.1",
-  "author": "Stabzs",
+  "version": "16.0.0",
+  "author": "RelGarrido",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dkachko/Angular2-Toaster.git"
+    "url": "https://github.com/RelGarrido/Angular2-Toaster.git"
   },
   "bugs": {
-    "url": "https://github.com/dkachko/Angular2-Toaster/issues"
+    "url": "https://github.com/RelGarrido/Angular2-Toaster/issues"
   },
   "keywords": [
     "angular",
@@ -24,10 +24,10 @@
     "growl"
   ],
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "rxjs": "^7.5.0"
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "rxjs": "^6.6.7"
   },
   "dependencies": {
     "tslib": "^2.4.0"
